--- a/DesignApp/Views/Home/Pagination.cshtml
+++ b/DesignApp/Views/Home/Pagination.cshtml
@@ -31,7 +31,7 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination">
             <!-- Previous Page -->
-            <li class="page-item @( _Pagination.pageIndex <= 1 ? "disabled" : "")">
+            <li class="page-item @(ViewData["IsPreviousButtonDisabled"] as bool? == true ? "disabled" : "")">
                 <a class="page-link" asp-controller="Home" asp-action="Pagination" asp-route-pageSize="@_Pagination.pageSize" asp-route-pageIndex="@(_Pagination.pageIndex - 1)" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
@@ -49,7 +49,7 @@
             }
 
             <!-- Next Page -->
-            <li class="page-item @( _Pagination.pageIndex >= _Pagination.pageCount ? "disabled" : "")">
+            <li class="page-item @(ViewData["IsNextButtonDisabled"] as bool? == true ? "disabled" : "")">
                 <a class="page-link" aria-label="Next" asp-controller="Home" asp-action="Pagination" asp-route-pageSize="@_Pagination.pageSize" asp-route-pageIndex="@(_Pagination.pageIndex + 1)">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
